Introduce the shark dependency in the Awale project.
Add it in the CMake
Include it in the Awale main.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ find_package(Qt5 COMPONENTS Quick Core)
 
 qt5_add_resources(RESOURCES qml.qrc)
 
+# set the path to the library folder
+link_directories(/usr/local/share/shark/)
+
 add_executable(Awale main.cpp Core/awale.cpp  Core/game.cpp  Core/graphbuilder.cpp  Core/holeevaluator.cpp ${RESOURCES})
 
 qt5_use_modules(Awale Quick Core)
+
+target_link_libraries(Awale shark)
