--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -17,10 +17,10 @@ set(CMAKE_AUTORCC ON)
 
 find_package(Qt5Core)
 
-add_library (awalelib awale.cpp  game.cpp  graphbuilder.cpp  holeevaluator.cpp simplecrypt.cpp)
+add_library (awalelib awale.cpp  game.cpp  graphbuilder.cpp  holeevaluator.cpp simplecrypt.cpp objectstorage.cpp)
 
 # Make sure the compiler can find include files for our Hello library
-# when other libraries or executables link to Hello
+# when other libraries or executables link
 target_include_directories (awalelib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 
