Server: Add cmake flags to make it compile with last boostlib for shark lib..

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,9 @@ cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)
 
 project (Awale)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fext-numeric-literals -L/usr/lib64 -lstdc++")
 
 add_subdirectory(Core)
 add_subdirectory(Server)
-
 
 #qt5_use_modules(Awale Quick Core)
